--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://krbai.flowus.cn/?embed=true" frameborder="0"></iframe>
+    <iframe src="https://flowus.cn/krbai/share/ba8555b8-b56b-4aaa-8c7c-2a34d8c6d78a?code=M7NP5V&embed=true" frameborder="0"></iframe>
 </body>
 </html>
